--- a/inicio.html
+++ b/inicio.html
@@ -15,6 +15,7 @@
 		<article>
 			<h1>Hola, este es el primer cambio</h1>
 			<h2>Hola, este es el segundo cambio</h2>
+			<h3>Hola, este es el tercer cambio</h3>
 		</article>
 
 	
