--- a/inicio.html
+++ b/inicio.html
@@ -8,14 +8,12 @@
 		
 
 		<header>
-			
+			<h1>este es un titulo</h1>
 		</header>
 
 	
 		<article>
-			<h1>Hola, este es el primer cambio</h1>
-			<h2>Hola, este es el segundo cambio</h2>
-			<h3>Hola, este es el tercer cambio</h3>
+			
 		</article>
 
 	
