--- a/inicio.html
+++ b/inicio.html
@@ -11,7 +11,7 @@
 			<h1>este es un titulo</h1>
 			<h2>este es otro titulo</h2>
 			<h3>otro titulo mas</h3>
-			<p>hola este es un parrafo</p>
+			<p>este es un parrafo</p>
 		</header>
 
 	
