otro parrafo mas

--- a/inicio.html
+++ b/inicio.html
@@ -12,6 +12,7 @@
 			<h2>este es otro titulo</h2>
 			<h3>otro titulo mas</h3>
 			<p>este es un parrafo</p>
+			<p>hola hola hola</p>
 		</header>
 
 	
